k8s/base/media/rtorrent-flood/deployment.yaml
#
# Nimbus
# Media Streaming Service
# rTorrent-flood
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rtorrent-flood
spec:
  replicas: 1
  selector: {} # to be templated by kustomize
  template:
    spec:
      containers:
        - name: rtorrent
          image: jesec/rtorrent-flood
          imagePullPolicy: Always
          ports:
            - containerPort: 6881
              name: rtorrent
          volumeMounts:
          - mountPath: /home/download/.config/rtorrent
            name: config
          - mountPath: /home/download/media
            name: media
          - mountPath: /home/download/shared
            name: shared
          command: ["rtorrent"]
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: rtorrent
        - name: flood
          image: jesec/flood
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - mountPath: /home/download/shared
              name: shared
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            httpGet:
              path: /files/
              port: http
      volumes:
        - name: config
          configMap:
            name: rtorrent-config
        - name: media
          emptyDir: {}
          # persistentVolumeClaim:
          #   claimName: media-data
        - name: shared
          emptyDir: {}
      securityContext:
        fsGroup: 1001
