k8s/base/media/rtorrent-flood/service.yaml
#
# Nimbus
# K8s Deployment: Media Streaming Service
# rTorrent-flood
#

apiVersion: v1
kind: Service
metadata:
  name: flood
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
